Add PUT /v3/shipments/{id} endpoint
