# internal/app/rest/openapi.yaml
@@ -98,18 +98,18 @@ paths:
               schema:
                 $ref: '#/components/schemas/ShipmentV3'
   /v3/shipments/{id}:
+    parameters:
+      - in: path
+        name: id
+        required: true
+        schema:
+          type: string
+          example: a449b857-5e97-4bee-8ffe-1b544fa4ec5b
     get:
       tags:
         - Shipments
       summary: Get shipment
       operationId: getShipmentV3
-      parameters:
-        - in: path
-          name: id
-          required: true
-          schema:
-            type: string
-            example: a449b857-5e97-4bee-8ffe-1b544fa4ec5b
       responses:
         '200':
           description: return a shipment
@@ -117,6 +117,33 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ShipmentV3'
+    put:
+      tags:
+        - Shipments
+      summary: Update shipment state
+      operationId: putShipmentV3
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              required:
+                - state
+              properties:
+                state:
+                  type: string
+                  example: shipping
+                  enum:
+                    - shipping
+                    - delivered
+      responses:
+        '200':
+          description: update shipment success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ShipmentV3'
+
   /v3/shipments/{id}/items:
     post:
       tags:
